<resources>
    <string name="app_name">My Application</string>
    <string name="search">Search something on YouTube:</string>
    <string name="enter_search_term">Enter search term(s)</string>
    <string name="search_button">search</string>
    <string name="filter">Filter videos by</string>
    <string name="relevance">Relevance</string>
    <string name="upload_date">Upload date</string>
    <string name="view_count">View count</string>
    <string name="rating">Rating</string>
    <string name="top_result">TOP RESULT</string>
    <string name="white_text">sup</string>
</resources>
