<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity"

    >
    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        />
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv"
        android:padding="15dp"
        >
        <RadioButton
            android:id="@+id/rb_relevance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relevance"
            android:paddingRight="10dp"
            android:color="#f00"
            />
        <RadioButton
            android:id="@+id/rb_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_date"
            android:paddingRight="10dp"
            android:color="#f00"
            />
        <RadioButton
            android:id="@+id/rb_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_count"
            android:paddingRight="10dp"
            android:color="#f00"
            />

    </RadioGroup>
</RelativeLayout>