<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalGL"
        app:layout_constraintGuide_percent="0.3"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalGL2"
        app:layout_constraintGuide_percent="0.64"
        android:orientation="horizontal"/>
    <TextView
        android:id="@+id/searchTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="27sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalGL" />
    <EditText
        android:id="@+id/queryET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_search_term"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/searchTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <include
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/queryET"
        layout="@layout/activity_filter_radio_buttons" />


    <Button
        android:id="@+id/searchButton"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/search_button"
        android:textAllCaps="true"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        android:background="@drawable/roundedbutton"
        android:onClick="searchVideos"
        />
    <TextView
        android:id="@+id/topResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_result"
        android:textSize="27sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalGL2"
        app:layout_constraintTop_toTopOf="@+id/horizontalGL2" />


</androidx.constraintlayout.widget.ConstraintLayout>